--- a/app/src/main/res/layout/activity_nav_base.xml
+++ b/app/src/main/res/layout/activity_nav_base.xml
@@ -12,7 +12,7 @@
             type="com.barebone.app.binders.UiManager" />
     </data>
 
-<android.support.v4.widget.DrawerLayout
+<androidx.drawerlayout.widget.DrawerLayout
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -24,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <android.support.design.widget.NavigationView
+    <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -33,7 +33,7 @@
         app:headerLayout="@layout/nav_header_nav_base"
         app:menu="@menu/activity_nav_base_drawer" />
 
-</android.support.v4.widget.DrawerLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
 
 
 </layout>
